syntax = "proto3";

package xyz.block.ftl.v1;

import "xyz/block/ftl/v1/ftl.proto";

option go_package = "github.com/TBD54566975/ftl/backend/protos/xyz/block/ftl/v1;ftlv1";
option java_multiple_files = true;

message ConfigRef {
  optional string module = 1;
  string name = 2;
}

enum ConfigProvider {
  CONFIG_PROVIDER_UNSPECIFIED = 0;

  // Write values inline in the configuration file.
  CONFIG_PROVIDER_INLINE = 1;

  // Print configuration as environment variables.
  CONFIG_PROVIDER_ENVAR = 2;

  // Use the database as a configuration store.
  CONFIG_PROVIDER_DB = 3;
}

message ConfigListRequest {
  optional string module = 1;
  optional bool include_values = 2;
  optional ConfigProvider provider = 3;
}
message ConfigListResponse {
  message Config {
    string ref_path = 1;
    optional bytes value = 2;
  }
  repeated Config configs = 1;
}

message ConfigGetRequest {
  ConfigRef ref = 1;
}
message ConfigGetResponse {
  bytes value = 1;
}

message ConfigSetRequest {
  optional ConfigProvider provider = 1;
  ConfigRef ref = 2;
  bytes value = 3;
}
message ConfigSetResponse {}

message ConfigUnsetRequest {
  optional ConfigProvider provider = 1;
  ConfigRef ref = 2;
}
message ConfigUnsetResponse {}

enum SecretProvider {
  SECRET_PROVIDER_UNSPECIFIED = 0;

  // Write values inline in the configuration file.
  SECRET_PROVIDER_INLINE = 1;

  // Print configuration as environment variables.
  SECRET_PROVIDER_ENVAR = 2;

  // Write to the system keychain.
  SECRET_PROVIDER_KEYCHAIN = 3;

  // Store a secret in the 1Password vault.
  SECRET_PROVIDER_OP = 4;

  // Store a secret in the AWS Secrets Manager.
  SECRET_PROVIDER_ASM = 5;
}

message SecretsListRequest {
  optional string module = 1;
  optional bool include_values = 2;
  optional SecretProvider provider = 3;
}
message SecretsListResponse {
  message Secret {
    string ref_path = 1;
    optional bytes value = 2;
  }
  repeated Secret secrets = 1;
}

message SecretGetRequest {
  ConfigRef ref = 1;
}
message SecretGetResponse {
  bytes value = 1;
}

message SecretSetRequest {
  optional SecretProvider provider = 1;
  ConfigRef ref = 2;
  bytes value = 3;
}
message SecretSetResponse {}

message SecretUnsetRequest {
  optional SecretProvider provider = 1;
  ConfigRef ref = 2;
}
message SecretUnsetResponse {}

message MapConfigsForModuleRequest {
  string module = 1;
}

message MapConfigsForModuleResponse {
  map<string, bytes> values = 1;
}

message MapSecretsForModuleRequest {
  string module = 1;
}

message MapSecretsForModuleResponse {
  map<string, bytes> values = 1;
}

// AdminService is the service that provides and updates admin data. For example,
// it is used to encapsulate configuration and secrets.
service AdminService {
  rpc Ping(PingRequest) returns (PingResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // List configuration.
  rpc ConfigList(ConfigListRequest) returns (ConfigListResponse);

  // Get a config value.
  rpc ConfigGet(ConfigGetRequest) returns (ConfigGetResponse);

  // Set a config value.
  rpc ConfigSet(ConfigSetRequest) returns (ConfigSetResponse);

  // Unset a config value.
  rpc ConfigUnset(ConfigUnsetRequest) returns (ConfigUnsetResponse);

  // List secrets.
  rpc SecretsList(SecretsListRequest) returns (SecretsListResponse);

  // Get a secret.
  rpc SecretGet(SecretGetRequest) returns (SecretGetResponse);

  // Set a secret.
  rpc SecretSet(SecretSetRequest) returns (SecretSetResponse);

  // Unset a secret.
  rpc SecretUnset(SecretUnsetRequest) returns (SecretUnsetResponse);

  // MapForModule combines all configuration values visible to the module.
  // Local values take precedence.
  rpc MapConfigsForModule(MapConfigsForModuleRequest) returns (MapConfigsForModuleResponse);

  // MapSecretsForModule combines all secrets visible to the module.
  // Local values take precedence.
  rpc MapSecretsForModule(MapSecretsForModuleRequest) returns (MapSecretsForModuleResponse);
}
